...
                    timezone = "UTC",
                    venue = "Crypto.com Arena",
                    status = GameStatus.BT,
                    timer = null,
                    league = GameLeague(
                        id = 12,
                        name = "NBA",
                        type = "League",
                        season = "2024-2025",
                        logoUrl = "https:\\/\\/media.api-sports.io\\/basketball\\/leagues\\/12.png"
                    ),
                    isPlayingNow = true,
                    country = Country(
                        id = 5,
                        name = "USA",
                        code = "US",
                        flagUrl = "https:\\/\\/media.api-sports.io\\/flags\\/us.svg"
                    ),
                    homeTeam = GameTeamInfo(
                        id = 145,
                        name = "Los Angeles Lakers",
                        logoUrl = "https:\\/\\/media.api-sports.io\\/basketball\\/teams\\/145.png"
                    ),
                    awayTeam = GameTeamInfo(
                        id = 149,
                        name = "Minnesota Timberwolves",
                        logoUrl = "https:\\/\\/media.api-sports.io\\/basketball\\/teams\\/149.png"
...
