...
                    modifier = Modifier.fillMaxSize(),
                    onRetryButtonClick = uiState.dataState.onRetryAction
                )
            }

            DataState.Success -> {
                TeamsList(
                    teams = uiState.teams,
                    favouriteTeamsIds = uiState.favouriteTeamsIds,
                    onClick = onNavigateToTeamDetails,
                    onStarIconClick = { team, isFavourite ->
                        onEvent(TeamsUiEvent.StarIconClick(team, isFavourite))
                    }
...
    ) {
        items(teams, key = { it.id }) { team ->
            val isFavourite = favouriteTeamsIds.any { it == team.id }
            AppCard(
                contentPadding = PaddingValues(top = 8.dp, bottom = 8.dp, start = 16.dp),
                onClick = { onClick(team) },
                modifier = Modifier.testTag("TeamCard")
            ) {
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.spacedBy(8.dp)
                ) {
                    AsyncImage(
...
